--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -5,17 +5,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:gravity="center_horizontal"
     tools:context=".DetailFragment">
 
     <TextView
         android:id="@+id/coffee_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textStyle="bold"
+        android:textSize="24sp"
         tools:text="@string/affogato_title"/>
 
     <View
+        android:id="@+id/detail_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginVertical="20dp"
@@ -23,9 +26,17 @@
 
     <TextView
         android:id="@+id/coffee_desc"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_weight="1"
         tools:text="@string/affogato_desc" />
+
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Kembali ke Daftar" />
 
 </LinearLayout>
