--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -59,5 +59,30 @@
             android:minHeight="48dp"
             android:gravity="center_vertical" />
 
+        <!-- ITEM BARU DARI ASSIGNMENT -->
+        <TextView
+            android:id="@+id/espresso"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/espresso_title"
+            android:minHeight="48dp"
+            android:gravity="center_vertical" />
+
+        <TextView
+            android:id="@+id/macchiato"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="@string/macchiato_title"
+            android:minHeight="48dp"
+            android:gravity="center_vertical" />
+
     </LinearLayout>
 </ScrollView>
